{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 192,
  "lineage": "e125c61f-75eb-981d-9876-1bf1fe90821b",
  "resources": [
    {
      "module": "module.us-e2_default_vpc",
      "mode": "data",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-2:223612579215:transit-gateway/tgw-0ad59949b573c20df",
            "association_default_route_table_id": "tgw-rtb-0529dae039ba51b1f",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "tgw in iss-dev us-east-2",
            "dns_support": "enable",
            "id": "tgw-0ad59949b573c20df",
            "owner_id": "223612579215",
            "propagation_default_route_table_id": "tgw-rtb-0529dae039ba51b1f",
            "tags": {
              "Name": "iss-dev-us-east-2-tgw",
              "contactemail": "cloudinfrastructureservices@PETCO.com",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/aws_terraform/iss-dev",
              "org": "petco",
              "owner": "david.stanford"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:security-group/sg-095a0c2d1d2e7d093",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-095a0c2d1d2e7d093",
            "ingress": [],
            "name": "default",
            "owner_id": "223612579215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-01caf34a0c57c1ca8",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05085cb4599680ddc",
              "subnet-0e495bf5192ad75dd"
            ],
            "tags": {
              "Name": "iss-dev_dev-us-e2-vpc1_tgw-attach",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0ad59949b573c20df",
            "vpc_id": "vpc-0497497bd1b141a30",
            "vpc_owner_id": "223612579215"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0280fb9be395d3fd5",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-140-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.140.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-us-e2-vpc1_az1-public-subnet_nat-eipalloc",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08399a2cac75d6c2c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-140-70-102.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.70.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-us-e2-vpc1_az2-public-subnet_nat-eipalloc",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:internet-gateway/igw-058b16dca7f176344",
            "id": "igw-058b16dca7f176344",
            "owner_id": "223612579215",
            "tags": {
              "Name": "dev-us-e2-vpc1_igw",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0280fb9be395d3fd5",
            "id": "nat-04181ba8a5764967a",
            "network_interface_id": "eni-0bea50fa02e1bb9c5",
            "private_ip": "172.25.0.146",
            "public_ip": "3.139.140.116",
            "subnet_id": "subnet-04ecd9f1eab52f6e9",
            "tags": {
              "Name": "dev-us-e2-vpc1_az1-public-subnet_nat",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            }
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08399a2cac75d6c2c",
            "id": "nat-0e7705d288f3fa1da",
            "network_interface_id": "eni-0a03deda8c8684787",
            "private_ip": "172.25.0.244",
            "public_ip": "3.140.70.102",
            "subnet_id": "subnet-02feb9e90ae10a23a",
            "tags": {
              "Name": "dev-us-e2-vpc1_az2-public-subnet_nat",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            }
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e718068e3079a651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04181ba8a5764967a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e718068e3079a65",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_nat_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f4e506d1cf7fd2241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e7705d288f3fa1da",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4e506d1cf7fd224",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_nat_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_transit_gateway",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-private-subnet-172.16.0.0/12",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.16.0.0/12",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e718068e3079a653337197873",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e718068e3079a65",
            "state": "blackhole",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "tgw-0ad59949b573c20df",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-private-subnet-172.16.0.0/12",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.16.0.0/12",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f4e506d1cf7fd2243337197873",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4e506d1cf7fd224",
            "state": "blackhole",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "tgw-0ad59949b573c20df",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058b16dca7f176344",
            "id": "r-rtb-04920c9cedaf17dfb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04920c9cedaf17dfb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_internet_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058b16dca7f176344",
            "id": "r-rtb-020d1d8a92576472b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020d1d8a92576472b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_internet_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00e718068e3079a65",
            "owner_id": "223612579215",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-us-e2-vpc1_az1-private-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4e506d1cf7fd224",
            "owner_id": "223612579215",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-us-e2-vpc1_az2-private-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04920c9cedaf17dfb",
            "owner_id": "223612579215",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-us-e2-vpc1_az1-public-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-020d1d8a92576472b",
            "owner_id": "223612579215",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-us-e2-vpc1_az2-public-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adafd48243e5948e",
            "route_table_id": "rtb-00e718068e3079a65",
            "subnet_id": "subnet-0e495bf5192ad75dd"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb000ce50bfbec26",
            "route_table_id": "rtb-0f4e506d1cf7fd224",
            "subnet_id": "subnet-05085cb4599680ddc"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f25c7b817e27e14b",
            "route_table_id": "rtb-04920c9cedaf17dfb",
            "subnet_id": "subnet-04ecd9f1eab52f6e9"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a85c51c826ab13c",
            "route_table_id": "rtb-020d1d8a92576472b",
            "subnet_id": "subnet-02feb9e90ae10a23a"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-us-e2-vpc1_az1-private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:subnet/subnet-0e495bf5192ad75dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.0.0/26",
            "id": "subnet-0e495bf5192ad75dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "223612579215",
            "tags": {
              "Name": "dev-us-e2-vpc1_az1-private-subnet",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc",
              "public": "false"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az1-public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:subnet/subnet-04ecd9f1eab52f6e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.0.128/26",
            "id": "subnet-04ecd9f1eab52f6e9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "223612579215",
            "tags": {
              "Name": "dev-us-e2-vpc1_az1-public-subnet",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc",
              "public": "true"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:subnet/subnet-05085cb4599680ddc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.0.64/26",
            "id": "subnet-05085cb4599680ddc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "223612579215",
            "tags": {
              "Name": "dev-us-e2-vpc1_az2-private-subnet",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc",
              "public": "false"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "dev-us-e2-vpc1_az2-public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:subnet/subnet-02feb9e90ae10a23a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.0.192/26",
            "id": "subnet-02feb9e90ae10a23a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "223612579215",
            "tags": {
              "Name": "dev-us-e2-vpc1_az2-public-subnet",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc",
              "public": "true"
            },
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:vpc/vpc-0497497bd1b141a30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.0.0/24",
            "default_network_acl_id": "acl-04e515cbd6b7100f5",
            "default_route_table_id": "rtb-03fd675420cf8965f",
            "default_security_group_id": "sg-095a0c2d1d2e7d093",
            "dhcp_options_id": "dopt-7ee22815",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0497497bd1b141a30",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03fd675420cf8965f",
            "owner_id": "223612579215",
            "tags": {
              "Name": "dev-us-e2-vpc1",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:223612579215:vpc-endpoint/vpce-0528beda28a103ac9",
            "cidr_blocks": [
              "52.219.80.0/20",
              "3.5.128.0/22",
              "3.5.132.0/23",
              "52.219.96.0/20"
            ],
            "id": "vpce-0528beda28a103ac9",
            "owner_id": "223612579215",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "Name": "dev-us-e2-vpc1_vpce",
              "deployed_by": "terraform",
              "environment": "dev",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-dev/-/tree/master/environments/dev/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-dev-vpc"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0497497bd1b141a30"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}